projects spacing fix, blog link fix

--- a/src/scenes/HomePage/components/Posts/components/Info/Info.module.scss
+++ b/src/scenes/HomePage/components/Posts/components/Info/Info.module.scss
@@ -61,10 +61,8 @@
   }
 
   &:hover {
-    @media screen and (max-width: $lg) {
-      &::before {
-        width: 100%;
-      }
+    &::before {
+      width: 100%;
     }
   }
 }
