--- a/src/scenes/Projects/components/List/components/ProjectScene/ProjectScene.module.scss
+++ b/src/scenes/Projects/components/List/components/ProjectScene/ProjectScene.module.scss
@@ -99,10 +99,14 @@
 }
 
 .descriptionLink {
+  // --coef-indent: 0.8;
+
   position: relative;
   @include hl-margin(top, 60px);
+  @include hl-margin(bottom, 10px);
   @include hl-font-size-text(14px);
 
+  padding-bottom: 8px;
   font-weight: 600;
   line-height: 1.42em;
   letter-spacing: 10px;
@@ -122,7 +126,7 @@
     height: 1px;
     width: 45%;
     left: 0;
-    bottom: -8px;
+    bottom: 0;
     background: linear-gradient(
       90deg,
       #e7a28f 1.59%,
@@ -143,7 +147,7 @@
   align-items: center;
   margin-top: auto;
   @media screen and (max-width: 1024px) {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
